Zico #1254 - Fixing carousel formatting on tablet

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_slick.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_slick.scss
@@ -267,6 +267,10 @@
 			padding-top: 5px;
 		}
 
+		@media #{$tablet} {
+			padding-top: 10px;
+		}
+
 		&.article-carousel-text {
 			height: 115px;
 
@@ -311,7 +315,7 @@
 			}
 
 			@media #{$tablet} {
-				font-size: 0.8em;
+				font-size: 0.9em;
 				padding-right: 20%;
 				padding-left: 5%;
 			}
